--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # main text of home
-name: John Doe
-bio: A Man who travels the world eating noodles
+name: st4nw
+bio: KDMHS 17th Hacking Defence student, studying system exploitation.
 
 # twitter summary info
 description: A blog about technology and stuff related
